--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 Python notebooks used in the paper entitled "Dust-scattering rings of GRB 221009A as seen by the Neil Gehrels Swift satellite: can we count them all?" by G. Vasilopoulos et al. 2023, MNRAS
 
-"MCMC_ring_analysis_v1.0.0" --> Construction of X-ray brightness profiles from individual XRT images + MCMC fitting
-"MCMC_ring_expansion_v1.0.0" --> MCMC fitting of ring expansion
+Credits: D. Karavola, G. Vasilopoulos, M. Petropoulou, S.I. Stathopoulos
+
+"MCMC_ring_analysis_v1.0.0" --> Construction of X-ray brightness profiles from individual XRT images + MCMC fitting (Fig. 2, Table A1)
+"MCMC_ring_expansion_v1.0.0" --> MCMC fitting of ring expansion (Fig. 5, Table 1, Fig. A1)
